# flutter_miniz

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/miniz_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: miniz.podspec
ios/Classes/: miniz.c
lib/: miniz.dart
lib/src/: miniz_base.dart  miniz_const.dart  miniz_enums.dart  miniz_exceptions.dart  miniz_ffi.dart
linux/: CMakeLists.txt
macos/: miniz.podspec
src/: CMakeLists.txt
src/miniz-2.2.0/: miniz.h
src/miniz-3.0.2/: miniz.h  wrapper.c
windows/: CMakeLists.txt
